--- a/writings/three/sketch.html
+++ b/writings/three/sketch.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2026-02-19 Thu 12:35 -->
+<!-- 2026-02-20 Fri 09:04 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>&lrm;</title>
@@ -200,12 +200,12 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org9dbb95b">1. reverse outline 2.17.26</a></li>
+<li><a href="#orgb596a4d">1. reverse outline 2.17.26</a></li>
 </ul>
 </div>
 </div>
-<div id="outline-container-org9dbb95b" class="outline-2">
-<h2 id="org9dbb95b"><span class="section-number-2">1.</span> reverse outline 2.17.26</h2>
+<div id="outline-container-orgb596a4d" class="outline-2">
+<h2 id="orgb596a4d"><span class="section-number-2">1.</span> reverse outline 2.17.26</h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
 <li>sex
@@ -214,7 +214,7 @@
 <ul class="org-ul">
 <li>sex is made pleasurable due to union it offers</li>
 </ul></li>
-<li>where does the union take place? the mind or the body?
+<li>the mind/body collapse: feelings of the body via the mind
 <ul class="org-ul">
 <li>a physiological phenomenon</li>
 </ul></li>
@@ -225,7 +225,7 @@ known: medusa
 incorporate difference</li>
 <li>ramifications on consent &amp; control, toward collectivity</li>
 </ul></li>
-<li>the flesh offers both creates fear (difference) and potential for
+<li>the flesh both creates fear (difference) and potential for
 connection (pleasure)</li>
 </ul></li>
 </ul>
@@ -261,16 +261,6 @@ connection (pleasure)</li>
 </tr>
 
 <tr>
-<td class="org-left">+ add context on seduction: colonization &amp; pleasure</td>
-<td class="org-left">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-left">+ add sex indexes contradiction between pleasure/survival drives</td>
-<td class="org-left">&#xa0;</td>
-</tr>
-
-<tr>
 <td class="org-left">3. critics debate role of bodily drives</td>
 <td class="org-left">adds critical context for seduction</td>
 </tr>
@@ -281,18 +271,8 @@ connection (pleasure)</li>
 </tr>
 
 <tr>
-<td class="org-left">+ integrate paragraph to flow in argument</td>
-<td class="org-left">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-left">34. does union take place in mind or body?</td>
-<td class="org-left">questions the location of union</td>
-</tr>
-
-<tr>
-<td class="org-left">+ integrate paragraph to flow in argument</td>
-<td class="org-left">&#xa0;</td>
+<td class="org-left">34. the union proffers the body to the mind</td>
+<td class="org-left">makes key point about body/mind conflation</td>
 </tr>
 
 <tr>
@@ -308,11 +288,6 @@ connection (pleasure)</li>
 <tr>
 <td class="org-left">6. "medusa" indicates fear of the unknown</td>
 <td class="org-left">adds critical context for xenophobia</td>
-</tr>
-
-<tr>
-<td class="org-left">+ add critical context on fear (Moraga, Anzaldua?)</td>
-<td class="org-left">&#xa0;</td>
 </tr>
 
 <tr>
@@ -571,7 +546,7 @@ connection (pleasure)</li>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: fcalado</p>
-<p class="date">Created: 2026-02-19 Thu 12:35</p>
+<p class="date">Created: 2026-02-20 Fri 09:04</p>
 <p class="validation"><a href="https://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
